<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/back1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_Text_View"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        android:textSize="45sp"
        android:padding="50dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Id_TextView"
            android:text="@string/Main_Id"
            android:textSize="30sp"
            android:layout_weight="0.38"/>
        <EditText
            android:id="@+id/Main_Edit_ID"
            android:layout_width="200dp"
            android:layout_height="63dp"
            android:hint="请输入用户名"
            android:textSize="30sp"
            android:textColorHint="#CCCCCC"
            android:inputType="number"
            android:maxLength="8"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:orientation="horizontal"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Id_TextView2"
            android:text="@string/Main_Password"
            android:textSize="30sp"
            android:layout_weight="0.057"/>

        <EditText
            android:id="@+id/Main_Edit_Password"
            android:layout_width="200dp"
            android:layout_height="63dp"
            android:hint="请输入密码"
            android:textSize="30sp"
            android:textColorHint="#CCCCCC"
            android:layout_weight="0.096"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:id="@+id/Main_Button"
        android:layout_weight="0.12"
        android:text="@string/Main_Button"
        android:textSize="25dp"/>

</LinearLayout>

